# PartIIProject

./: .gitmodules  README.md
Progress/: .gitignore  progress.tex
Progress/preamble/: packages.tex
Project/: .clang-format  .gitignore  CMakeLists.txt  TODO  flake.nix  readme.md
Project/res/perf/: Models.txt  barn_owl.json  bistro_inside.json  bistro_outside.json  cat.json  character.json  empty.json  sponza.json
Project/res/shaders/: Grid_AS.slang  basic_compute.slang  brickmap_AS.slang  contree_AS.slang  default_defines.slang  gBuffer_descriptor.slang  grid_AS.slang  grid_AS_mod.slang  hit_data.slang  hit_record.slang  intersection_colour.slang  lighting.slang  new_include.slang  octree_AS.slang  push_constants.slang  ray.slang  ray_generation.slang  render.slang  render_descriptor.slang  setup_descriptor.slang  test_include.slang  texture_AS.slang  ui.slang
Project/res/shaders/AS/: brickmap_AS.slang  brickmap_AS_req.slang  contree_AS.slang  general.slang  grid_AS.slang  octree_AS.slang  texture_AS.slang
Project/res/shaders/AS/structures/: brickmap.slang  contree.slang  octree.slang
Project/res/shaders/modification/: brickmap.slang  general.slang  grid.slang  texture.slang
Project/res/shaders/structures/: grid.slang
Project/scripts/: helper.py  plots.py  view_perf_data.py
Project/src/: CMakeLists.txt  acceleration_structure_manager.cpp  acceleration_structure_manager.hpp  application.cpp  application.hpp  buffer.cpp  buffer.hpp  camera.cpp  camera.hpp  compute_pipeline.cpp  compute_pipeline.hpp  debug_utils.cpp  debug_utils.hpp  descriptor_layout.cpp  descriptor_layout.hpp  descriptor_set.cpp  descriptor_set.hpp  event_dispatcher.hpp  event_watcher.cpp  event_watcher.hpp  events.cpp  events.hpp  file_watcher.cpp  file_watcher.hpp  frame_commands.cpp  frame_commands.hpp  image.cpp  image.hpp  logger.cpp  logger.hpp  main.cpp  morton_code.cpp  morton_code.hpp  pipeline_layout.hpp  ring_buffer.hpp  shader_manager.cpp  shader_manager.hpp  tracing.hpp  voxel.hpp  window.cpp  (+1 more)
Project/src/accelerationStructures/: CMakeLists.txt  accelerationStructure.hpp  acceleration_structure.hpp  brickmap.cpp  brickmap.hpp  contree.cpp  contree.hpp  grid.cpp  grid.hpp  octree.cpp  octree.hpp  texture.cpp  texture.hpp
Project/src/events/: CMakeLists.txt
Project/src/events/events/: CMakeLists.txt  event_dispatcher.cpp  event_dispatcher.hpp  events.hpp
Project/src/generators/: CMakeLists.txt  brickmap.cpp  brickmap.hpp  common.hpp  contree.cpp  contree.hpp  grid.cpp  grid.hpp  octree.cpp  octree.hpp  texture.cpp  texture.hpp
Project/src/generators/generators/: CMakeLists.txt  brickmap.cpp  brickmap.hpp  common.hpp  contree.cpp  contree.hpp  grid.cpp  grid.hpp  octree.cpp  octree.hpp  texture.cpp  texture.hpp
Project/src/loaders/: CMakeLists.txt  equationLoader.cpp  equation_loader.cpp  equation_loader.hpp  loader.hpp
Project/src/loaders/loaders/: CMakeLists.txt  equation_loader.cpp  equation_loader.hpp  loader.hpp  sparse_loader.cpp  sparse_loader.hpp
Project/src/logger/: CMakeLists.txt
Project/src/logger/logger/: CMakeLists.txt  logger.cpp  logger.hpp
Project/src/modification/: CMakeLists.txt
Project/src/modification/modification/: CMakeLists.txt  diff.cpp  diff.hpp  mod_type.hpp
Project/src/morton/: CMakeLists.txt
Project/src/morton/morton/: CMakeLists.txt
Project/src/network/: CMakeLists.txt
Project/src/network/network/: CMakeLists.txt  header.cpp  header.hpp  serializers.cpp  serializers.hpp  setup.cpp  setup.hpp
Project/src/network/network/handlers/: CMakeLists.txt  client.cpp  client.hpp  server.cpp  server.hpp
Project/src/renderer/: CMakeLists.txt  acceleration_structure_manager.cpp  acceleration_structure_manager.hpp  animation_manager.cpp  animation_manager.hpp  application.cpp  application.hpp  buffer.cpp  buffer.hpp  camera.cpp  camera.hpp  compression.cpp  compression.hpp  compute_pipeline.cpp  debug_utils.hpp  descriptor_layout.cpp  descriptor_layout.hpp  descriptor_set.hpp  encoder.cpp  encoder.hpp  file_watcher.cpp  frame_commands.cpp  frame_commands.hpp  image.cpp  image.hpp  main.cpp  modification_manager.cpp  modification_manager.hpp  performance_logger.cpp  performance_logger.hpp  pipeline_layout.cpp  queue.cpp  queue.hpp  ring_buffer.hpp  scene_manager.cpp  scene_manager.hpp  shader_manager.cpp  shader_manager.hpp  window.cpp  window.hpp
Project/src/renderer/accelerationStructures/: CMakeLists.txt  acceleration_structure.hpp  brickmap.cpp  brickmap.hpp  contree.cpp  contree.hpp  grid.cpp  grid.hpp  octree.cpp  octree.hpp  texture.cpp  texture.hpp
Project/src/renderer/network/: CMakeLists.txt  callbacks.cpp  callbacks.hpp  header.cpp  header.hpp  loop.cpp  loop.hpp  messages.cpp  messages.hpp  node.cpp  node.hpp  setup.cpp  setup.hpp
Project/src/renderer/protos/: CMakeLists.txt
Project/src/renderer/protos/proto/network_proto/: datagram_header.proto  frame.proto  header.proto  messages.proto  stream_header.proto  update.proto
Project/src/renderer/window/: CMakeLists.txt  base_window.hpp  glfw_window.cpp  glfw_window.hpp  headless_window.cpp  headless_window.hpp
Project/src/serializers/: CMakeLists.txt
Project/src/serializers/protos/: CMakeLists.txt
Project/src/serializers/protos/proto/as_proto/: brickmap.proto  contree.proto  general.proto  grid.proto  octree.proto  texture.proto
Project/src/serializers/serializers/: CMakeLists.txt  brickmap.cpp  brickmap.hpp  common.cpp  common.hpp  contree.cpp  contree.hpp  grid.cpp  grid.hpp  octree.cpp  octree.hpp  texture.cpp  texture.hpp
Project/src/server/: CMakeLists.txt  main.cpp
Project/src/voxelizer/: CMakeLists.txt  main.cpp  parser.cpp  parser.hpp  parser_args.hpp
Project/src/voxelizer/parsers/: CMakeLists.txt  assimp.cpp  assimp.hpp  general.cpp  general.hpp  gltf.cpp  gltf.hpp  obj.cpp  obj.hpp  vox.cpp  vox.hpp
Proposal/: .gitignore  proposal.tex
Proposal/backmatter/: bibliography.bib
Proposal/chapters/: 01_introduction.tex  02_starting_point.tex  03_success_criteria.tex  04_plan.tex  04_success_criteria.tex  05_resource_declaration.tex  (+1 more)
(+2 files in other folders)
